# rust-error-file-limits

./: Cargo.toml  README.md
.github/workflows/: ci.yml
c/: main.c
src/: main.rs
